# mtl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.me  main.cc
.cache/clangd/index/: main.cc.77514A2E66AA26DF.idx  pair.hpp.64F8680B13E37DDE.idx  pair.hpp.7F9676E4D8DFD241.idx  tuple.hpp.BF7A4F80BE2E4B1A.idx  tuple.hpp.F1EDA3A51062B5A6.idx  utility.hpp.35D7F889DBDD4720.idx  utility.hpp.36510D6F3C413F6A.idx
config/: .clang-format
test/: CMakeLists.txt  any_test.hpp  bitset_test.hpp  main.cc
tests/: any_test.hpp  bitset_test.hpp  functional_test.hpp  main.cc  optional_test.hpp  pair_test.hpp  shared_ptr_test.hpp
utility/: any.hpp  bitset.hpp  functional.hpp  memory.hpp  optional.hpp  pair.hpp  shared_ptr.hpp  tools.hpp  tuple.hpp  unique_ptr.hpp  utility.hpp  variant.hpp
